# mitsuzo

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md
.cargo/: config.toml
.github/workflows/: build.yml  ci.yml  cli-build.yml
crates/backend/: Cargo.toml
crates/backend/src/: db.rs  handlers.rs  main.rs  routes.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/frontend/: Cargo.toml  Dioxus.toml  build.rs  tailwind.css
crates/frontend/assets/: diagram.mmd  tailwind.css
crates/frontend/src/: main.rs  utils.rs
crates/frontend/src/components/: footer.rs  mod.rs  navbar.rs  popup.rs
crates/frontend/src/i18n/: en-US.ftl  fa-IR.ftl
crates/frontend/src/views/: changelog.rs  home.rs  how_it_works.rs  layout.rs  mod.rs  paste.rs
crates/types/: Cargo.toml
crates/types/src/: lib.rs
crates/utils/: Cargo.toml
crates/utils/src/: lib.rs
