[package]
name = "backend"
version.workspace = true
edition = "2024"
license.workspace = true
authors.workspace = true
repository.workspace = true

[lib]
path = "src/lib.rs"

[[bin]]
name = "backend"
path = "src/main.rs"

[dependencies]
futures.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
rand.workspace = true
axum.workspace = true
serde.workspace = true
bitcode.workspace = true
tower-http.workspace = true
mitsuzo-types = { workspace = true }
sled.workspace = true
base64.workspace = true
