[package]
name = "cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
base64.workspace = true
bitcode.workspace = true
clap.workspace = true
dirs.workspace = true
mitsuzo-types.workspace = true
mitsuzo-utils.workspace = true
reqwest.workspace = true
rpassword.workspace = true
serde.workspace = true
serde_yaml.workspace = true
tokio.workspace = true
zeroize.workspace = true
