[package]
name = "mitsuzo-frontend"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
dioxus.workspace = true
reqwasm.workspace = true
serde.workspace = true
bitcode.workspace = true
log.workspace = true
wasm-logger.workspace = true
mitsuzo-types = { workspace = true }

base64.workspace = true
js-sys.workspace = true
wasm-bindgen.workspace = true
web-sys.workspace = true
getrandom.workspace = true
gloo-file.workspace = true
gloo-timers.workspace = true
futures.workspace = true
mitsuzo-utils = { workspace = true }
wasm-bindgen-futures.workspace = true
dioxus-i18n.workspace = true
unic-langid.workspace = true

[build-dependencies]
mermaid-rs-renderer.workspace = true


[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
debug = 0
strip = "symbols"
panic = "abort"

[features]
default = ["web"]
web = ["dioxus/web"]
